# ai-video-workflow

./: .cursorrules  .gitignore  CLAUDE.md  Dockerfile  N8N_SETUP.md  README.md  SETUP.md  alembic.ini  cli.py  env.example  main.py  package-lock.json  package.json  pyproject.toml  skaffold.yaml
.claude/: settings.json
.claude/skills/deploy/: SKILL.md
.claude/skills/video/: SKILL.md
.claude/skills/video/docs/: workflow-guide.md
.claude/skills/youtube/: SKILL.md
alembic/: env.py
docs/: DATABASE.md
k8s/: README.md  configmap.yaml  cronjob.yaml  namespace.yaml  postgres.yaml  secrets.yaml.example  storage.yaml
k8s/test/: deployment.yaml  job.yaml
scripts/: daily-video-generator.js  gemini-story-generator.js  init_db.py  merge-videos.js  setup-n8n-workflow.js  setup.py  test-apis.js  veo3-video-generator.js  youtube-auth-helper.js  youtube-uploader.js
src/: __init__.py  config.py  database.py  db_models.py  models.py  repository.py  story_generator.py  video_generator.py  workflow.py  youtube_uploader.py
src/agents/: __init__.py  base.py  project_manager_agent.py  story_agent.py  video_agent.py  youtube_agent.py
src/skills/: __init__.py  base.py  project_skills.py  story_skills.py  video_skills.py  youtube_skills.py
workflows/: daily-youtube-shorts-simple.json  daily-youtube-shorts.json
